challenge(session-01): gustavo piminchumo

--- a/Session 01/projects/Gustavo Piminchumo/index.html
+++ b/Session 01/projects/Gustavo Piminchumo/index.html
@@ -8,30 +8,21 @@
   <title>HTML Basic tags - CloudUNT Bootcamp</title>
 
   <meta name="keywords" content="HTML, CSS" />
-  <meta name="description" content="Descripción de la página web" />
-  <meta name="author" content="Johan Villanueva" />
+  <meta name="description" content="etiquetas de HMTL" />
+  <meta name="author" content="Gustavo Piminchumo" />
 
   <!-- <meta http-equiv="refresh" content="3" /> -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
-
-  <link rel="stylesheet" href="mis-estilos.css" />
-
-  <script src="mis-scripts.js"></script>
-
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" /> -->
+  <!--   <link rel="stylesheet" href="mis-estilos.css" /> -->
+  <!--   <script src="mis-scripts.js"></script> -->
   <style>
     /* Sección de estilos! */
-    body {
-      font-family: "Lato", sans-serif;
-    }
   </style>
 
   <script>
     /*seccion de scripts*/
-    /* console.log("Sección de código javascript!"); */
   </script>
 </head>
-
 <body>
   <header>
     <strong> HTML </strong>
@@ -50,7 +41,7 @@
   </header>
   <main>
     <h1> HTML: Etiquetas principales (etiqueta - Significado)</h1>
-         
+
     <section>
       <h2 id="semantica">Semánticas</h2>
 
@@ -94,14 +85,15 @@
     <hr>
     <section>
       <h2 id="formatotext">Formato de texto</h2>
-      <b>b - Negrita</b><br /><br />
-      <i>i - Cursiva</i><br /><br />
-      <u>u - Subrayado</u><br /><br />
-      <small>small - Texto tamaño pequeño</small><br /><br />
-      <strong> strong - Texto reforzado</strong><br /><br />
-      <em>em - Texto enfatizado</em><br /><br />
-      sub - Example<sub>subíndice</sub><br /><br />
-      sup - Example<sup>superíndice</sup><br /><br />
+      <p> <b>b - Negrita</b> </p>
+      <p> <i>i - Cursiva</i> </p>
+      <p><u>u - Subrayado</u></p>
+      <p><small>small - Texto tamaño pequeño</small> </p> 
+      <p> <strong> strong - Texto reforzado</strong> </p>
+      <p> <em>em - Texto enfatizado</em> </p>
+      <p>mark - <mark> Texto resaltado</mark> </p>
+      <p> sub - Example<sub>subíndice</sub></p>
+      <p> sup - Example<sup>superíndice</sup></p>
     </section>
     <hr>
     <section>
@@ -131,7 +123,7 @@
 
       <a href="https://www.w3schools.com/tags/tag_a.asp" target="_blank">a - Hipervínculo</a>
 
-     <p>nav - Grupo de Hipervínculos</p> 
+      <p>nav - Grupo de Hipervínculos</p>
       <nav>
         <a href="https://www.w3schools.com/html/" target="_blank">HTML</a>
         <a href="https://www.w3schools.com/css/" target="_blank">CSS</a>
@@ -144,21 +136,21 @@
 
       <li>li - Elemento de una lista</li>
 
-      <p>ul - Listas desordenadas</p> 
+      <p>ul - Listas desordenadas</p>
       <ul>
         <li>Item</li>
         <li>Item</li>
         <li>Item</li>
       </ul>
 
-     <p>ol - Listas ordenadas</p> 
+      <p>ol - Listas ordenadas</p>
       <ol>
         <li>Item</li>
         <li>Item</li>
         <li>Item</li>
       </ol>
 
-      <p>dl - Listas de items con descripción</p> 
+      <p>dl - Listas de items con descripción</p>
       <dl>
         <dt>Item 1</dt>
         <dd>Descripción o detalle</dd>
@@ -289,36 +281,39 @@
     <section>
       <h2 id="multimedia">Multimedia</h2>
 
-       <p> img - Imágenes</p>
-        <img height="100" src="https://i.pinimg.com/originals/27/21/76/2721761c2f9dc3254a2d9c4febfa60f8.png"
-          alt="Una imagen de perritos" />
-        <p>figure & figcaption - Imágenes con etiqueta o descripción</p>  
-        <figure>
-          <img width="200" src="https://i.pinimg.com/originals/27/21/76/2721761c2f9dc3254a2d9c4febfa60f8.png"
-            alt="A random image" />
-          <figcaption>Fig.1 - Cachorros</figcaption>
-        </figure>
+      <p> img - Imágenes</p>
+      <img height="100" src="https://i.pinimg.com/originals/27/21/76/2721761c2f9dc3254a2d9c4febfa60f8.png"
+        alt="Una imagen de perritos" />
+      <p>figure & figcaption - Imágenes con etiqueta o descripción</p>
+      <figure>
+        <img width="200" src="https://i.pinimg.com/originals/27/21/76/2721761c2f9dc3254a2d9c4febfa60f8.png"
+          alt="A random image" />
+        <figcaption>Fig.1 - Cachorros</figcaption>
+      </figure>
 
-       <p> video - Reproductor de video en formatos: MP4, WebM y OGG.</p><br />
-        <video width="320" height="240" controls>
-          <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4" />
-          <source src="https://www.w3schools.com/tags/movie.ogg" type="video/ogg" />
-          Texto informativo para navegadores que no soporten esta etiqueta
-        </video>
+      <p> video - Reproductor de video en formatos: MP4, WebM y OGG.</p><br />
+      <video width="320" height="240" controls>
+        <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4" />
+        <source src="https://www.w3schools.com/tags/movie.ogg" type="video/ogg" />
+        Texto informativo para navegadores que no soporten esta etiqueta
+      </video>
 
-     
-        <p>audio - Reproductor de sonido en formatos: MP3, WebM y OGG.</p> 
-        <audio controls>
-          <source src="https://www.w3schools.com/tags/horse.ogg" type="audio/ogg" />
-          <source src="https://www.w3schools.com/tags/horse.mp3" type="audio/mpeg" />
-          Texto informativo para navegadores que no soporten esta etiqueta
-        </audio>
-      </details>
+
+      <p>audio - Reproductor de sonido en formatos: MP3, WebM y OGG.</p>
+      <audio controls>
+        <source src="https://www.w3schools.com/tags/horse.ogg" type="audio/ogg" />
+        <source src="https://www.w3schools.com/tags/horse.mp3" type="audio/mpeg" />
+        Texto informativo para navegadores que no soporten esta etiqueta
+      </audio>
+      <p> iframe - Un marco en línea permite incrustar otro documento dentro del documento HTML actual.</p>
+      <iframe src="https://www.unitru.edu.pe/" title="Universisdad Nacional de Trujillo" ></iframe>
     </section>
   </main>
   <hr>
   <footer>
-    <p>Aprende más en : <a href="https://www.w3schools.com/" target="_blanck">W3SCHOOLS</a></p>
+    <p>Visita : <a href="https://www.w3schools.com/" target="_blanck">W3SCHOOLS</a></p>
   </footer>
+
 </body>
+
 </html>
