feat(session-02): add project folder

--- a/Session 02/projects/Johan Villanueva/index.html
+++ b/Session 02/projects/Johan Villanueva/index.html
@@ -35,7 +35,9 @@
 
           <p>Full access for less than $1 a day</p>
 
-          <button>Sign up</button>
+          <button>
+            Sign up
+          </button>
         </section>
         <section>
           <h4>Why Us</h4>
