challenge(session-02): gustavo piminchumo

--- a/Session 02/projects/Gustavo Piminchumo/index.html
+++ b/Session 02/projects/Gustavo Piminchumo/index.html
@@ -30,7 +30,7 @@ Grayish Blue: #98a6bd -->
           skills.
         </p>
       </section>
-      <section >
+      <section class="pinferior">
         <section class="inferior izquierda">
           <h4>Monthly Subscription</h4>
 
