challenge(session-03):bruno mont

--- a/Session 03/projects/Bruno Mont/index.html
+++ b/Session 03/projects/Bruno Mont/index.html
@@ -35,7 +35,7 @@
             <p class="cuerpo__card__time">5h ago || Full time</p>
             <b class="cuerpo__card__profession">Senior Sotware Engineer</b>
             <p class="cuerpo__card__empresa">So Digital Inc.</p>
-            <address class="cuerpo__card__address">Remote, Seoul, Tokyo, Mountain View,</br> San Francisco</address>
+            <address class="cuerpo__card__address">Remote, Seoul, Tokyo, Mountain View, San Francisco</address>
         </section>
         <section class="cuerpo__card">
             <i class="cuerpo__card--celeste__icon fas fa-cat"></i>
