feat(session-04): create responsive design example

--- a/Session 04/index.html
+++ b/Session 04/index.html
@@ -6,6 +6,13 @@
     <title>Responsive Design</title>
 
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="tablets.css" media="(min-width: 480px)" />
+    <link
+      rel="stylesheet"
+      href="small-screens.css"
+      media="(min-width: 768px)"
+    />
+    <link rel="stylesheet" href="desktops.css" media="(min-width: 1024px)" />
   </head>
   <body>
     <main class="container">
